tests/ui/once_name_invalid_ident.rs
use cached::macros::once;

#[once(name = "bad-name")]
fn f() -> i32 {
    42
}

fn main() {}
